modified OverrideRule to use privileges rather than roles